添加邮件配置类